# NVDA-QQQ-SOXL-option-trade-bot

./: .env.example  .gitignore  AGENTS.md  README.md  Tastytrade_QQQ_NVDA_SOXL_Bot_Implementation_Plan.md  Tastytrade_QQQ_NVDA_SOXL_Strategy_Spec_v2_Expert.md  TradingBotControl.pyw  TradingBotControl.spec  pyproject.toml
data/: paper_rl_events.jsonl
docs/engineering/: Capital_Allocation_and_Strategy_Optimization_Plan.md  ChatGPT_Strategy_Review_Prompt_2026-06-04.md  Current_Strategy_Risk_Review_2026-06-04.md  QQQ_Full_Chain_Data_Collection_Architecture.md  Strategy_Optimization_20_Round_Status_2026-06-07.md  Tastytrade_Real_Data_Liquidity_Remediation_Plan.md
docs/strategy/: VNext_Paper_Strategy_Policy_2026-06-07.md
src/trading_bot/: __init__.py  __main__.py  cli.py  desktop.py  paper.py  paper_rl_dataset_logger.py  runner.py
tests/unit/: test_backtest.py  test_candidate_ranker.py  test_config.py  test_desktop.py  test_duplicate_correlation_gate.py  test_execution_pipeline.py  test_exit_plan_quality.py  test_imports.py  test_indicators_regime.py  test_liquidity_gate.py  test_llm_review.py  test_market_data.py  test_paper.py  test_paper_rl_dataset_logger.py  test_policy_audit.py  test_position_sizing.py  test_qqq_chain_archive.py  test_research_bot.py  test_risk_budget.py  test_risk_engine.py  test_runner_cli.py  (+10 more)
tools/: TradingBotControl.cs  build_strategy_optimization_context.py  chatgpt_browser_round.py  download_today_research_export.ps1  install_qqq_chain_sync_task.ps1  run_qqq_chain_sync.ps1  run_strategy_optimization_rounds.py  sync_qqq_chain_archive.py
(+76 files in other folders)
