[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "tastytrade-trading-bot"
version = "0.1.0"
description = "Research-first, dry-run-first options trading assistant for QQQ, NVDA, SOXL, SPY, IWM, and SMH."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Bot Tastytrade" }]
dependencies = []

[project.optional-dependencies]
dev = [
    "black>=24.0",
    "pytest>=8.0",
    "ruff>=0.5.0",
]
tastytrade = [
    "tastytrade>=10.3.0",
]
desktop = [
    "pyinstaller>=6.0",
]

[project.scripts]
trading-bot = "trading_bot.cli:main"
trading-bot-desktop = "trading_bot.desktop:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.black]
line-length = 100
target-version = ["py311"]
